deploy/overlays/prd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: typebot-ingress
  annotations:
    kubernetes.io/ingress.class: kong
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
    - host: typebot.us-east-1.prd.cloudhumans.io
      http:
        paths:
          - backend:
              service:
                name: typebot
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
    - host: typebot.cloudhumans.com
      http:
        paths:
          - backend:
              service:
                name: typebot
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - typebot.us-east-1.prd.cloudhumans.io
        - typebot.cloudhumans.com
      secretName: typebot-tls-secret
